--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         </div>
       </div>
     </nav>
-
+ 
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/padsu.png" alt="">
+        <img class="img-responsive" src="img/padsu.png" alt="">
         <div class="intro-text">
           <span class="name">Gian Carlo Padlan </span>
           <hr class="star-light">
-          <span class="skills">Web Developer - IT Expert - Student - 9k MMR</span>
+          <span class="skills">Web Developer - IT Expert - Student - </span>
         </div>
       </div>
     </header>
