--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="intro-text">
           <span class="name">Gian Carlo Padlan </span>
           <hr class="star-light">
-          <span class="skills">Web Developer - IT Expert - Student - </span>
+          <span class="skills">Web Developer - IT Expert - Student </span>
         </div>
       </div>
     </header>
