--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-responsive" src="img/padsu.png" alt="">
+        <img class="img-responsive" src="img/padsu.jpg" alt="">
         <div class="intro-text">
           <span class="name">Gian Carlo Padlan </span>
           <hr class="star-light">
